fix testo e tag class

--- a/index.html
+++ b/index.html
@@ -24,21 +24,34 @@
          magnam,architecto nam
           laboriosam quos,quaerat temporibus ut.
       </p>
-      <p class="nuovo">Lorem ipsum dolor 
+
+      <p class=vecchio>
+        <b>Pinco Pallo</b>
+        <br>
+        Lorem ipsum dolor 
         sit amet consectetur 
-        adipiscing elit. Vero ex.
-         Quasi aliquid quidem,
-         magnam,architecto nam
-          laboriosam quos,quaerat temporibus ut.
+        adipiscing elit.Rerum ad
+        saepe minus totam cum!
+        Cumque dolor harum porro
+        voluptatem beatae officia
+        dolores quia, ipsa nemo!
+        Veniam doloremque alias
+        possimus ratione
         </p>
-      <p class="nuovo">Lorem ipsum dolor 
+
+      <p class=vecchio>
+        <b>Pinco Pallo</b>
+        <br>
+        Lorem ipsum dolor 
         sit amet consectetur 
-        adipiscing elit. Vero ex.
-         Quasi aliquid quidem,
-         magnam,architecto nam
-          laboriosam quos,quaerat temporibus ut.
+        adipiscing elit laboriosam 
+        quos, quaerat temporibus ut.
         </p>
-      <p class="nuovo">Lorem ipsum dolor 
+
+      <p class="nuovo">
+        <b>Pinco Pallo</b>
+        <br>
+        Lorem ipsum dolor 
         sit amet consectetur 
         adipiscing elit. Vero ex.
          Quasi aliquid quidem,
