add inizio parte finale

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,12 +9,13 @@
 
 
 <body>
-    <header id="inizio">
+
+<header id="inizio">
 <h1>Header</h1>
 </header>
-<hr>
-    <main>
-      <p class="nuovo">
+
+    <main id="corpo">
+      <p class="soprasotto">
         <b>Pinco Pallo</b>
         <br>
         Lorem ipsum dolor 
@@ -25,7 +26,7 @@
           laboriosam quos,quaerat temporibus ut.
       </p>
 
-      <p class=vecchio>
+      <p class=centro>
         <b>Pinco Pallo</b>
         <br>
         Lorem ipsum dolor 
@@ -39,7 +40,7 @@
         possimus ratione
         </p>
 
-      <p class=vecchio>
+      <p class=centro>
         <b>Pinco Pallo</b>
         <br>
         Lorem ipsum dolor 
@@ -48,7 +49,7 @@
         quos, quaerat temporibus ut.
         </p>
 
-      <p class="nuovo">
+      <p class="soprasotto">
         <b>Pinco Pallo</b>
         <br>
         Lorem ipsum dolor 
@@ -58,6 +59,7 @@
          magnam,architecto nam
           laboriosam quos,quaerat temporibus ut.
         </p>
+        
        
     </main>
 </body>
