add fine layout

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
 
-<header id="inizio">
-<h1>Header</h1>
+<header>
+<h1 id="inizio">Header</h1>
 </header>
 
     <main id="corpo">
@@ -37,7 +37,7 @@
         voluptatem beatae officia
         dolores quia, ipsa nemo!
         Veniam doloremque alias
-        possimus ratione
+        possimus ratione!
         </p>
 
       <p class=centro>
@@ -62,5 +62,8 @@
         
        
     </main>
+    <footer>
+        <p id="made">Made with ♥ by...</p>
+    </footer>
 </body>
-</html>
+</html> 
